--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Contact and Booking | Elysium By Georgie Rose</title>
-  <meta name="description" content="Book nails or permanent jewellery, ask about events, and send enquiries to Elysium By Georgie Rose.">
+  <meta name="description" content="Send a booking enquiry for nails, permanent jewellery, weddings, and pop-ups. Contact Elysium By Georgie Rose by form, Instagram, phone, or email.">
+  <link rel="canonical" href="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/contact.html">
   <meta property="og:title" content="Contact and Booking | Elysium By Georgie Rose">
-  <meta property="og:description" content="Two-minute enquiry form for nails, permanent jewellery, events and wedding keepsakes.">
+  <meta property="og:description" content="Send a booking enquiry for nails, permanent jewellery, weddings, and pop-ups. Contact Elysium By Georgie Rose by form, Instagram, phone, or email.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/images/Jewellery/Wedding%20fair%20pop%20up%20with%20georgie%20in%20shot.jpg">
+  <meta property="og:url" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/contact.html">
+  <meta property="og:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Contact and Booking | Elysium By Georgie Rose">
+  <meta name="twitter:description" content="Send a booking enquiry for nails, permanent jewellery, weddings, and pop-ups. Contact Elysium By Georgie Rose by form, Instagram, phone, or email.">
+  <meta name="twitter:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
   <link rel="icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="shortcut icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="apple-touch-icon" href="assets/images/curlogo.png">
@@ -23,7 +29,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
-        <img class="brand-mark" src="assets/images/curlogo.png" alt="Elysium By Georgie Rose" width="50" height="50">
+        <img class="brand-mark" src="assets/images/curlogo.png" alt="Elysium By Georgie Rose" loading="eager" decoding="async" width="50" height="50">
         <span class="brand-text">
           <span class="brand-name" data-brand-name>Elysium By Georgie Rose</span>
           <span class="brand-tagline">Nails and Permanent Jewellery</span>
@@ -44,13 +50,13 @@
 
             <div class="header-meta">
         <div class="social-inline" aria-label="Social links">
-          <a class="social-link" data-social-link="instagram" href="#" aria-label="Instagram">
+          <a class="social-link" data-social-link="instagram" href="https://www.instagram.com/elysium_by_georgierose/" aria-label="Instagram">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M7.8 2h8.4A5.8 5.8 0 0 1 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8A5.8 5.8 0 0 1 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2Zm-.2 2A3.6 3.6 0 0 0 4 7.6v8.8A3.6 3.6 0 0 0 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6A3.6 3.6 0 0 0 16.4 4H7.6Zm9.65 1.5a1.15 1.15 0 1 1 0 2.3 1.15 1.15 0 0 1 0-2.3ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z"/></svg>
           </a>
-          <a class="social-link" data-social-link="facebook" href="#" aria-label="Facebook">
+          <a class="social-link" data-social-link="facebook" href="https://www.facebook.com/profile.php?id=61571925904476" aria-label="Facebook">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M13.5 22v-8h2.7l.4-3h-3.1V9.1c0-.9.3-1.6 1.6-1.6h1.7V4.8c-.8-.1-1.6-.2-2.4-.2-2.4 0-4.1 1.5-4.1 4.3V11H8v3h2.3v8h3.2Z"/></svg>
           </a>
-          <a class="social-link" data-social-link="tiktok" href="#" aria-label="TikTok">
+          <a class="social-link" data-social-link="tiktok" href="https://www.tiktok.com/@elysium_by_georgierose?is_from_webapp=1&amp;sender_device=pc" aria-label="TikTok">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M19.59 6.69a4.83 4.83 0 0 1-3.77-1.73v8.13a7.06 7.06 0 1 1-6.1-7 6.8 6.8 0 0 1 1.34.13v3.09a3.86 3.86 0 1 0 2.65 3.67V1.5h2.96a4.84 4.84 0 0 0 2.92 4.43Z"/></svg>
           </a>
         </div>
@@ -83,15 +89,15 @@
             </div>
             <div class="contact-item">
               <strong>Instagram</strong>
-              <a data-social-link="instagram" href="#">Message directly</a>
+              <a data-social-link="instagram" href="https://www.instagram.com/elysium_by_georgierose/">Message directly</a>
             </div>
             <div class="contact-item">
               <strong>Facebook</strong>
-              <a data-social-link="facebook" href="#">Follow updates</a>
+              <a data-social-link="facebook" href="https://www.facebook.com/profile.php?id=61571925904476">Follow updates</a>
             </div>
             <div class="contact-item">
               <strong>TikTok</strong>
-              <a data-social-link="tiktok" href="#">Follow on TikTok</a>
+              <a data-social-link="tiktok" href="https://www.tiktok.com/@elysium_by_georgierose?is_from_webapp=1&amp;sender_device=pc">Follow on TikTok</a>
             </div>
           </div>
 
@@ -119,23 +125,27 @@
 
           <form class="form-fields" data-form-type="enquiry" action="https://formspree.io/f/xvzbgojb" method="POST" novalidate>
             <div class="field">
-              <label for="name">Full name</label>
-              <input id="name" name="name" type="text" autocomplete="name" required>
+              <label for="contact-name">Full name (required)</label>
+              <input id="contact-name" name="name" type="text" autocomplete="name" required data-validate-field data-required-message="Enter your full name." aria-describedby="contact-name-error">
+              <p class="field-error" id="contact-name-error" data-field-error-for="contact-name" aria-live="polite"></p>
             </div>
 
             <div class="field">
-              <label for="email">Email address</label>
-              <input id="email" name="email" type="email" autocomplete="email" required>
+              <label for="contact-email">Email address (required)</label>
+              <input id="contact-email" name="email" type="email" autocomplete="email" required data-validate-field data-required-message="Enter your email address." aria-describedby="contact-email-error">
+              <p class="field-error" id="contact-email-error" data-field-error-for="contact-email" aria-live="polite"></p>
             </div>
 
             <div class="field">
-              <label for="phone">Phone number (optional)</label>
-              <input id="phone" name="phone" type="tel" autocomplete="tel" inputmode="tel">
+              <label for="contact-phone">Phone number (optional)</label>
+              <input id="contact-phone" name="phone" type="tel" autocomplete="tel" inputmode="tel" data-validate-field aria-describedby="contact-phone-hint contact-phone-error">
+              <p class="field-help" id="contact-phone-hint">Add a mobile number if you prefer replies by phone.</p>
+              <p class="field-error" id="contact-phone-error" data-field-error-for="contact-phone" aria-live="polite"></p>
             </div>
 
             <div class="field">
-              <label for="service">Service interest</label>
-              <select id="service" name="service" required>
+              <label for="contact-service">Service interest (required)</label>
+              <select id="contact-service" name="service" required data-validate-field data-required-message="Select the service you want to book." aria-describedby="contact-service-error">
                 <option value="">Select a service</option>
                 <option value="BIAB">BIAB</option>
                 <option value="Gel polish">Gel polish</option>
@@ -144,17 +154,21 @@
                 <option value="Pop-up/event">Pop-up or event</option>
                 <option value="Wedding keepsakes">Wedding keepsakes</option>
               </select>
+              <p class="field-error" id="contact-service-error" data-field-error-for="contact-service" aria-live="polite"></p>
             </div>
 
             <div class="field">
-              <label for="date">Preferred date or timeframe</label>
-              <input id="date" name="preferred_date" type="text" placeholder="Example: Late March, weekday evening" required>
+              <label for="contact-date">Preferred date or timeframe (required)</label>
+              <input id="contact-date" name="preferred_date" type="text" placeholder="Example: Late March, weekday evening" required data-validate-field data-required-message="Share your preferred date or timeframe." aria-describedby="contact-date-hint contact-date-error">
+              <p class="field-help" id="contact-date-hint">Include ideal days or times to speed up scheduling.</p>
+              <p class="field-error" id="contact-date-error" data-field-error-for="contact-date" aria-live="polite"></p>
             </div>
 
             <div class="field">
-              <label for="message">Your message</label>
-              <textarea id="message" name="message" placeholder="Tell us what you would like to book." required></textarea>
-              <p class="field-help">Please do not include sensitive personal or payment information.</p>
+              <label for="contact-message">Your message (required)</label>
+              <textarea id="contact-message" name="message" placeholder="Tell us what you would like to book." required data-validate-field data-required-message="Add a short message about your booking request." aria-describedby="contact-message-hint contact-message-error"></textarea>
+              <p class="field-help" id="contact-message-hint">Please do not include sensitive personal or payment information.</p>
+              <p class="field-error" id="contact-message-error" data-field-error-for="contact-message" aria-live="polite"></p>
             </div>
 
             <p class="form-error" data-form-error aria-live="polite"></p>
@@ -208,9 +222,9 @@
         <a href="privacy.html">Privacy Policy</a>
         <a href="cookies.html">Cookies Policy</a>
         <a href="accessibility.html">Accessibility</a>
-        <a data-social-link="instagram" href="#">Instagram</a>
-        <a data-social-link="facebook" href="#">Facebook</a>
-        <a data-social-link="tiktok" href="#">TikTok</a>
+        <a data-social-link="instagram" href="https://www.instagram.com/elysium_by_georgierose/">Instagram</a>
+        <a data-social-link="facebook" href="https://www.facebook.com/profile.php?id=61571925904476">Facebook</a>
+        <a data-social-link="tiktok" href="https://www.tiktok.com/@elysium_by_georgierose?is_from_webapp=1&amp;sender_device=pc">TikTok</a>
         <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:Elysium.pj@gmail.com">Elysium.pj@gmail.com</a></span>
         <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="tel:+447361497192">07361 497192</a></span>
       </div>
@@ -221,11 +235,3 @@
   <script src="assets/main.js" defer></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
