--- a/cookies.html
+++ b/cookies.html
@@ -4,11 +4,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cookies Policy | Elysium By Georgie Rose</title>
-  <meta name="description" content="Cookie usage information for the Elysium By Georgie Rose website.">
+  <meta name="description" content="Learn how cookies and browser storage are used on the Elysium By Georgie Rose website, including social embeds and how to manage preferences.">
+  <link rel="canonical" href="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/cookies.html">
   <meta property="og:title" content="Cookies Policy | Elysium By Georgie Rose">
-  <meta property="og:description" content="How cookies and social embeds are handled on this website.">
+  <meta property="og:description" content="Learn how cookies and browser storage are used on the Elysium By Georgie Rose website, including social embeds and how to manage preferences.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/images/curlogo.png">
+  <meta property="og:url" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/cookies.html">
+  <meta property="og:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Cookies Policy | Elysium By Georgie Rose">
+  <meta name="twitter:description" content="Learn how cookies and browser storage are used on the Elysium By Georgie Rose website, including social embeds and how to manage preferences.">
+  <meta name="twitter:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
   <link rel="icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="shortcut icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="apple-touch-icon" href="assets/images/curlogo.png">
@@ -23,7 +29,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
-        <img class="brand-mark" src="assets/images/curlogo.png" alt="Elysium By Georgie Rose" width="50" height="50">
+        <img class="brand-mark" src="assets/images/curlogo.png" alt="Elysium By Georgie Rose" loading="eager" decoding="async" width="50" height="50">
         <span class="brand-text">
           <span class="brand-name" data-brand-name>Elysium By Georgie Rose</span>
           <span class="brand-tagline">Nails and Permanent Jewellery</span>
@@ -44,13 +50,13 @@
 
       <div class="header-meta">
         <div class="social-inline" aria-label="Social links">
-          <a class="social-link" data-social-link="instagram" href="#" aria-label="Instagram">
+          <a class="social-link" data-social-link="instagram" href="https://www.instagram.com/elysium_by_georgierose/" aria-label="Instagram">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M7.8 2h8.4A5.8 5.8 0 0 1 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8A5.8 5.8 0 0 1 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2Zm-.2 2A3.6 3.6 0 0 0 4 7.6v8.8A3.6 3.6 0 0 0 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6A3.6 3.6 0 0 0 16.4 4H7.6Zm9.65 1.5a1.15 1.15 0 1 1 0 2.3 1.15 1.15 0 0 1 0-2.3ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z"/></svg>
           </a>
-          <a class="social-link" data-social-link="facebook" href="#" aria-label="Facebook">
+          <a class="social-link" data-social-link="facebook" href="https://www.facebook.com/profile.php?id=61571925904476" aria-label="Facebook">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M13.5 22v-8h2.7l.4-3h-3.1V9.1c0-.9.3-1.6 1.6-1.6h1.7V4.8c-.8-.1-1.6-.2-2.4-.2-2.4 0-4.1 1.5-4.1 4.3V11H8v3h2.3v8h3.2Z"/></svg>
           </a>
-          <a class="social-link" data-social-link="tiktok" href="#" aria-label="TikTok">
+          <a class="social-link" data-social-link="tiktok" href="https://www.tiktok.com/@elysium_by_georgierose?is_from_webapp=1&amp;sender_device=pc" aria-label="TikTok">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M19.59 6.69a4.83 4.83 0 0 1-3.77-1.73v8.13a7.06 7.06 0 1 1-6.1-7 6.8 6.8 0 0 1 1.34.13v3.09a3.86 3.86 0 1 0 2.65 3.67V1.5h2.96a4.84 4.84 0 0 0 2.92 4.43Z"/></svg>
           </a>
         </div>
@@ -129,9 +135,9 @@
         <a href="privacy.html">Privacy Policy</a>
         <a href="cookies.html">Cookies Policy</a>
         <a href="accessibility.html">Accessibility</a>
-        <a data-social-link="instagram" href="#">Instagram</a>
-        <a data-social-link="facebook" href="#">Facebook</a>
-        <a data-social-link="tiktok" href="#">TikTok</a>
+        <a data-social-link="instagram" href="https://www.instagram.com/elysium_by_georgierose/">Instagram</a>
+        <a data-social-link="facebook" href="https://www.facebook.com/profile.php?id=61571925904476">Facebook</a>
+        <a data-social-link="tiktok" href="https://www.tiktok.com/@elysium_by_georgierose?is_from_webapp=1&amp;sender_device=pc">TikTok</a>
         <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:Elysium.pj@gmail.com">Elysium.pj@gmail.com</a></span>
         <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="tel:+447361497192">07361 497192</a></span>
       </div>
@@ -142,6 +148,3 @@
   <script src="assets/main.js" defer></script>
 </body>
 </html>
-
-
-
