--- a/nails.html
+++ b/nails.html
@@ -4,11 +4,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Nails | Elysium By Georgie Rose</title>
-  <meta name="description" content="BIAB, gel polish and gel extensions at Elysium By Georgie Rose, with premium prep, finish and aftercare guidance.">
+  <meta name="description" content="Book BIAB, gel polish, and gel extensions with Elysium By Georgie Rose. View aftercare guidance, recent nail sets, timings, and booking options.">
+  <link rel="canonical" href="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/nails.html">
   <meta property="og:title" content="Nails | Elysium By Georgie Rose">
-  <meta property="og:description" content="Book BIAB, gel polish and gel extensions with a refined, detail-led approach.">
+  <meta property="og:description" content="Book BIAB, gel polish, and gel extensions with Elysium By Georgie Rose. View aftercare guidance, recent nail sets, timings, and booking options.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/images/Nails/Blue%20Extensions.jpg">
+  <meta property="og:url" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/nails.html">
+  <meta property="og:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Nails | Elysium By Georgie Rose">
+  <meta name="twitter:description" content="Book BIAB, gel polish, and gel extensions with Elysium By Georgie Rose. View aftercare guidance, recent nail sets, timings, and booking options.">
+  <meta name="twitter:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
   <link rel="icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="shortcut icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="apple-touch-icon" href="assets/images/curlogo.png">
@@ -23,7 +29,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
-        <img class="brand-mark" src="assets/images/curlogo.png" alt="Elysium By Georgie Rose" width="50" height="50">
+        <img class="brand-mark" src="assets/images/curlogo.png" alt="Elysium By Georgie Rose" loading="eager" decoding="async" width="50" height="50">
         <span class="brand-text">
           <span class="brand-name" data-brand-name>Elysium By Georgie Rose</span>
           <span class="brand-tagline">Nails and Permanent Jewellery</span>
@@ -44,13 +50,13 @@
 
             <div class="header-meta">
         <div class="social-inline" aria-label="Social links">
-          <a class="social-link" data-social-link="instagram" href="#" aria-label="Instagram">
+          <a class="social-link" data-social-link="instagram" href="https://www.instagram.com/elysium_by_georgierose/" aria-label="Instagram">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M7.8 2h8.4A5.8 5.8 0 0 1 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8A5.8 5.8 0 0 1 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2Zm-.2 2A3.6 3.6 0 0 0 4 7.6v8.8A3.6 3.6 0 0 0 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6A3.6 3.6 0 0 0 16.4 4H7.6Zm9.65 1.5a1.15 1.15 0 1 1 0 2.3 1.15 1.15 0 0 1 0-2.3ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z"/></svg>
           </a>
-          <a class="social-link" data-social-link="facebook" href="#" aria-label="Facebook">
+          <a class="social-link" data-social-link="facebook" href="https://www.facebook.com/profile.php?id=61571925904476" aria-label="Facebook">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M13.5 22v-8h2.7l.4-3h-3.1V9.1c0-.9.3-1.6 1.6-1.6h1.7V4.8c-.8-.1-1.6-.2-2.4-.2-2.4 0-4.1 1.5-4.1 4.3V11H8v3h2.3v8h3.2Z"/></svg>
           </a>
-          <a class="social-link" data-social-link="tiktok" href="#" aria-label="TikTok">
+          <a class="social-link" data-social-link="tiktok" href="https://www.tiktok.com/@elysium_by_georgierose?is_from_webapp=1&amp;sender_device=pc" aria-label="TikTok">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M19.59 6.69a4.83 4.83 0 0 1-3.77-1.73v8.13a7.06 7.06 0 1 1-6.1-7 6.8 6.8 0 0 1 1.34.13v3.09a3.86 3.86 0 1 0 2.65 3.67V1.5h2.96a4.84 4.84 0 0 0 2.92 4.43Z"/></svg>
           </a>
         </div>
@@ -67,8 +73,8 @@
           <h1 class="hero-title">Nails</h1>
           <p class="lead">BIAB, gel polish and gel extensions shaped around your style, schedule and maintenance preferences.</p>
           <div class="btn-group">
-            <a class="btn btn-primary" data-book-link href="contact.html">Book nails</a>
-            <a class="btn btn-ghost" data-social-link="instagram" href="#">Message on Instagram</a>
+            <a class="btn btn-primary" data-book-link href="contact.html">Book / Enquire</a>
+            <a class="btn btn-ghost" data-social-link="instagram" href="https://www.instagram.com/elysium_by_georgierose/">Message on Instagram</a>
           </div>
           <div class="hero-metadata" aria-label="Nail service highlights">
             <span class="meta-pill">BIAB overlays</span>
@@ -78,8 +84,8 @@
         </div>
         <div class="hero-visual" aria-hidden="true">
           <div class="hero-collage">
-            <img src="assets/images/Nails/Blue%20Extensions.jpg" alt="Blue extension nails" width="900" height="1100">
-            <img src="assets/images/Nails/Pink%20french%20with%20bow.jpg" alt="Pink French nails with bow" width="900" height="1100">
+            <img src="assets/images/Nails/Blue%20Extensions.jpg" srcset="assets/images/Nails/Blue%20Extensions.jpg 480w, assets/images/Nails/Blue%20Extensions.jpg 960w, assets/images/Nails/Blue%20Extensions.jpg 1440w" sizes="(max-width: 760px) 46vw, (max-width: 1080px) 50vw, 32vw" alt="Nail set - blue extensions" loading="eager" decoding="async" fetchpriority="high" width="900" height="1100">
+            <img src="assets/images/Nails/Pink%20french%20with%20bow.jpg" srcset="assets/images/Nails/Pink%20french%20with%20bow.jpg 480w, assets/images/Nails/Pink%20french%20with%20bow.jpg 960w, assets/images/Nails/Pink%20french%20with%20bow.jpg 1440w" sizes="(max-width: 760px) 46vw, (max-width: 1080px) 50vw, 32vw" alt="Nail set - pink French bow design" loading="eager" decoding="async" fetchpriority="high" width="900" height="1100">
           </div>
         </div>
       </div>
@@ -162,22 +168,28 @@
       <div class="container">
         <h2 class="section-title">Nail gallery</h2>
         <p class="section-intro">Recent nail sets from BIAB, gel polish and extensions appointments.</p>
+        <!--
+          Image optimisation targets:
+          - Gallery thumbnails: under 150KB each where possible.
+          - Hero images: around 250KB to 400KB each.
+          - Prefer AVIF/WebP exports with JPG fallback when new assets are prepared.
+        -->
         <div class="image-grid" aria-label="Nails gallery">
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Blue%20Extensions.jpg" data-alt="Blue nail extensions"><img src="assets/images/Nails/Blue%20Extensions.jpg" alt="Blue nail extensions" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Blue%20extensions%20pt2.jpg" data-alt="Blue extension variation"><img src="assets/images/Nails/Blue%20extensions%20pt2.jpg" alt="Blue extension variation" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Pale%20blue%20extensions.jpg" data-alt="Pale blue extension nails"><img src="assets/images/Nails/Pale%20blue%20extensions.jpg" alt="Pale blue extension nails" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Pink%20french%20with%20bow.jpg" data-alt="Pink French nails with bow"><img src="assets/images/Nails/Pink%20french%20with%20bow.jpg" alt="Pink French nails with bow" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Christmas%20nails.jpg" data-alt="Christmas themed nails"><img src="assets/images/Nails/Christmas%20nails.jpg" alt="Christmas themed nails" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Cat%20nails.jpg" data-alt="Cat themed nail art"><img src="assets/images/Nails/Cat%20nails.jpg" alt="Cat themed nail art" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Red%20nails%20with%20snowflake.jpg" data-alt="Red nails with snowflake detail"><img src="assets/images/Nails/Red%20nails%20with%20snowflake.jpg" alt="Red nails with snowflake detail" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Strawberry%20nails.jpg" data-alt="Strawberry inspired nail art"><img src="assets/images/Nails/Strawberry%20nails.jpg" alt="Strawberry inspired nail art" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Red%20nails%20plain.jpg" data-alt="Plain red gel nails"><img src="assets/images/Nails/Red%20nails%20plain.jpg" alt="Plain red gel nails" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Pink%20nails%20with%20cherry%20pt1.jpg" data-alt="Pink cherry nails alternate angle"><img src="assets/images/Nails/Pink%20nails%20with%20cherry%20pt1.jpg" alt="Pink cherry nails alternate angle" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Plain%20red%20nails%20square.jpeg" data-alt="Square red nails"><img src="assets/images/Nails/Plain%20red%20nails%20square.jpeg" alt="Square red nails" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Brown%20nails%20with%20cherry%20pt1.jpg" data-alt="Brown cherry nails"><img src="assets/images/Nails/Brown%20nails%20with%20cherry%20pt1.jpg" alt="Brown cherry nails" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Brown%20nails%20with%20cherry%20pt2.jpg" data-alt="Brown cherry nails close-up"><img src="assets/images/Nails/Brown%20nails%20with%20cherry%20pt2.jpg" alt="Brown cherry nails close-up" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Green%20star%20nails.jpg" data-alt="Green star nails"><img src="assets/images/Nails/Green%20star%20nails.jpg" alt="Green star nails" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Cartoon%20nails.jpg" data-alt="Cartoon nail art"><img src="assets/images/Nails/Cartoon%20nails.jpg" alt="Cartoon nail art" loading="lazy" decoding="async" width="900" height="1120"></button>
+          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Blue%20Extensions.jpg" data-alt="Nail set - blue extensions"><img src="assets/images/Nails/Blue%20Extensions.jpg" alt="Nail set - blue extensions" loading="lazy" decoding="async" width="900" height="1120"></button>
+          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Blue%20extensions%20pt2.jpg" data-alt="Nail set - blue extensions"><img src="assets/images/Nails/Blue%20extensions%20pt2.jpg" alt="Nail set - blue extensions" loading="lazy" decoding="async" width="900" height="1120"></button>
+          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Pale%20blue%20extensions.jpg" data-alt="Nail set - pale blue extensions"><img src="assets/images/Nails/Pale%20blue%20extensions.jpg" alt="Nail set - pale blue extensions" loading="lazy" decoding="async" width="900" height="1120"></button>
+          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Pink%20french%20with%20bow.jpg" data-alt="Nail set - pink french with bow"><img src="assets/images/Nails/Pink%20french%20with%20bow.jpg" alt="Nail set - pink french with bow" loading="lazy" decoding="async" width="900" height="1120"></button>
+          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Christmas%20nails.jpg" data-alt="Nail set - christmas nails"><img src="assets/images/Nails/Christmas%20nails.jpg" alt="Nail set - christmas nails" loading="lazy" decoding="async" width="900" height="1120"></button>
+          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Cat%20nails.jpg" data-alt="Nail set - cat nails"><img src="assets/images/Nails/Cat%20nails.jpg" alt="Nail set - cat nails" loading="lazy" decoding="async" width="900" height="1120"></button>
+          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Red%20nails%20with%20snowflake.jpg" data-alt="Nail set - red nails with snowflake"><img src="assets/images/Nails/Red%20nails%20with%20snowflake.jpg" alt="Nail set - red nails with snowflake" loading="lazy" decoding="async" width="900" height="1120"></button>
+          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Strawberry%20nails.jpg" data-alt="Nail set - strawberry nails"><img src="assets/images/Nails/Strawberry%20nails.jpg" alt="Nail set - strawberry nails" loading="lazy" decoding="async" width="900" height="1120"></button>
+          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Red%20nails%20plain.jpg" data-alt="Nail set - red nails plain"><img src="assets/images/Nails/Red%20nails%20plain.jpg" alt="Nail set - red nails plain" loading="lazy" decoding="async" width="900" height="1120"></button>
+          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Pink%20nails%20with%20cherry%20pt1.jpg" data-alt="Nail set - pink nails with cherry"><img src="assets/images/Nails/Pink%20nails%20with%20cherry%20pt1.jpg" alt="Nail set - pink nails with cherry" loading="lazy" decoding="async" width="900" height="1120"></button>
+          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Plain%20red%20nails%20square.jpeg" data-alt="Nail set - plain red nails square"><img src="assets/images/Nails/Plain%20red%20nails%20square.jpeg" alt="Nail set - plain red nails square" loading="lazy" decoding="async" width="900" height="1120"></button>
+          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Brown%20nails%20with%20cherry%20pt1.jpg" data-alt="Nail set - brown nails with cherry"><img src="assets/images/Nails/Brown%20nails%20with%20cherry%20pt1.jpg" alt="Nail set - brown nails with cherry" loading="lazy" decoding="async" width="900" height="1120"></button>
+          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Brown%20nails%20with%20cherry%20pt2.jpg" data-alt="Nail set - brown nails with cherry"><img src="assets/images/Nails/Brown%20nails%20with%20cherry%20pt2.jpg" alt="Nail set - brown nails with cherry" loading="lazy" decoding="async" width="900" height="1120"></button>
+          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Green%20star%20nails.jpg" data-alt="Nail set - green star nails"><img src="assets/images/Nails/Green%20star%20nails.jpg" alt="Nail set - green star nails" loading="lazy" decoding="async" width="900" height="1120"></button>
+          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Cartoon%20nails.jpg" data-alt="Nail set - cartoon nails"><img src="assets/images/Nails/Cartoon%20nails.jpg" alt="Nail set - cartoon nails" loading="lazy" decoding="async" width="900" height="1120"></button>
         </div>
       </div>
     </section>
@@ -252,7 +264,7 @@
           <p class="muted">Send your preferred service and ideal date, and we will confirm availability.</p>
           <div class="btn-group">
             <a class="btn btn-primary" data-book-link href="contact.html">Book / Enquire</a>
-            <a class="btn btn-ghost" data-social-link="instagram" href="#">Message on Instagram</a>
+            <a class="btn btn-ghost" data-social-link="instagram" href="https://www.instagram.com/elysium_by_georgierose/">Message on Instagram</a>
           </div>
         </div>
       </div>
@@ -289,9 +301,9 @@
         <a href="privacy.html">Privacy Policy</a>
         <a href="cookies.html">Cookies Policy</a>
         <a href="accessibility.html">Accessibility</a>
-        <a data-social-link="instagram" href="#">Instagram</a>
-        <a data-social-link="facebook" href="#">Facebook</a>
-        <a data-social-link="tiktok" href="#">TikTok</a>
+        <a data-social-link="instagram" href="https://www.instagram.com/elysium_by_georgierose/">Instagram</a>
+        <a data-social-link="facebook" href="https://www.facebook.com/profile.php?id=61571925904476">Facebook</a>
+        <a data-social-link="tiktok" href="https://www.tiktok.com/@elysium_by_georgierose?is_from_webapp=1&amp;sender_device=pc">TikTok</a>
         <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:Elysium.pj@gmail.com">Elysium.pj@gmail.com</a></span>
         <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="tel:+447361497192">07361 497192</a></span>
       </div>
@@ -302,11 +314,3 @@
   <script src="assets/main.js" defer></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
